--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   firebase_core: ^3.7.0
   cloud_firestore: ^5.4.5
   lottie: ^3.1.3
+  intl: ^0.19.0
+  uuid: ^4.5.1
+  flutter_slidable: ^3.1.1
 
 dev_dependencies:
   flutter_test:
