--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   intl: ^0.19.0
   uuid: ^4.5.1
   flutter_slidable: ^3.1.1
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   flutter_test:
