--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
-  firebase_auth: ^5.3.2
-  firebase_core: ^3.7.0
-  cloud_firestore: ^5.4.5
+  firebase_auth: 6.1.2
+  firebase_core: ^4.2.1
+  cloud_firestore: ^6.1.0
   lottie: ^3.1.3
-  intl: ^0.19.0
+  intl: ^0.20.2
   uuid: ^4.5.1
-  flutter_slidable: ^3.1.1
+  flutter_slidable: ^4.0.3
   fl_chart: ^0.69.0
 
 dev_dependencies:
@@ -54,7 +54,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^6.0.0
 
 flutter_launcher_icons:
   android: "launcher_icon"
