--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,39 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"finance-tracker-e132f","appId":"1:49236096528:android:c4f02308e54288c40e7c95","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"finance-tracker-e132f","configurations":{"android":"1:49236096528:android:c4f02308e54288c40e7c95","ios":"1:49236096528:ios:880c6513827993100e7c95"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "finance-tracker-e132f",
+          "appId": "1:49236096528:android:c4f02308e54288c40e7c95",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "finance-tracker-e132f",
+          "configurations": {
+            "android": "1:49236096528:android:c4f02308e54288c40e7c95",
+            "ios": "1:49236096528:ios:880c6513827993100e7c95"
+          }
+        }
+      }
+    }
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "disallowLegacyRuntimeConfig": true,
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run lint"
+      ]
+    }
+  ]
+}
