--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   uuid: ^4.5.1
   flutter_slidable: ^4.0.3
   fl_chart: ^0.69.0
+  google_mobile_ads: ^6.0.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.1
