--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,5 +1,5 @@
-org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
+org.gradle.daemon=true
+org.gradle.parallel=true
 android.useAndroidX=true
 android.enableJetifier=true
-kotlin.incremental=false
-
