--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_slidable: ^4.0.3
   fl_chart: ^0.69.0
   google_mobile_ads: ^6.0.0
+  change_app_package_name: ^1.5.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.1
