--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   fl_chart: ^0.69.0
   google_mobile_ads: ^6.0.0
   change_app_package_name: ^1.5.0
+  loading_animation_widget: ^1.3.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.1
