--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   google_mobile_ads: ^6.0.0
   change_app_package_name: ^1.5.0
   loading_animation_widget: ^1.3.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.1
