--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   change_app_package_name: ^1.5.0
   loading_animation_widget: ^1.3.0
   shared_preferences: ^2.2.2
+  connectivity_plus: ^6.1.4
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.1
