--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,6 @@
-org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
+# Increase Gradle JVM memory
+org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8
+
 org.gradle.daemon=true
 org.gradle.parallel=true
 android.useAndroidX=true
