--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+20260210
 
 environment:
   sdk: ^3.5.4
@@ -47,6 +47,7 @@ dependencies:
   change_app_package_name: ^1.5.0
   loading_animation_widget: ^1.3.0
   shared_preferences: ^2.2.2
+  connectivity_plus: ^5.0.2
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.1
@@ -63,8 +64,8 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/logo.webp"
-  adaptive_icon_foreground: "assets/images/logo.webp" # Set the foreground image (same or different from image_path)
+  image_path: "assets/images/logo.png"
+  adaptive_icon_foreground: "assets/images/logo.png" # Set the foreground image (same or different from image_path)
   adaptive_icon_background: "#5F8F3C"
 
 # For information on the generic Dart part of this file, see the
