--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+20260210
+version: 1.0.1+20260214
 
 environment:
   sdk: ^3.5.4
@@ -48,6 +48,7 @@ dependencies:
   loading_animation_widget: ^1.3.0
   shared_preferences: ^2.2.2
   connectivity_plus: ^5.0.2
+  url_launcher: ^6.2.5
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.1
